--- a/index.html
+++ b/index.html
@@ -10,12 +10,27 @@
 
     <body>
 
-        <div id="hero-wrapper">
-            <div>
-                <h1>I love</h1>
-                <h1 id="second-header">Coffee!</h1>
+        <div id="navbar">
+            <div id="nav-social">   
+                <img id="icon" src="img/fb.png">
+                <img id="icon" src="img/insta.png">
+                <img id="icon" src="img/twitter.png">
             </div>
-            <p> There are many great coffees around the world, but the best coffee is the one in my hand right now. </p>
+            <div id="nav-text">
+                <h3 id="menu-link"> Home </h3>
+                <h3 id="menu-link"> About </h3>
+                <h3 id="menu-link"> Contact </h3>
+            </div>
+        </div>
+
+        <div id="hero-section">
+            <div id="hero-wrapper">
+                <div id="heading-wrapper">
+                    <h1>I love</h1>
+                    <h1 id="second-header">coffee!</h1>
+                </div>
+                <p> Coffee is good, we like drinking it to stay awake. There are many coffees around the world, but the best coffee there is the one in your hand that you are drinking right now. </p>
+            </div>
         </div>
 
         <div id="hero-beans">
