fixed header and added column section

--- a/index.html
+++ b/index.html
@@ -37,6 +37,29 @@
             
         </div>
 
+        <div class="standard-margin-section">
+            <div class="columns-wrapper">
+                <div class="column">
+                    <img class="column-image" src="img/cap_.jpg">
+                    <div class="column-text-wrapper">
+                        <h3>Cappucino</h3>
+                    </div>
+                </div>
+                <div class="column middle">
+                    <div class="column-text-wrapper">
+                        <h3>Esspresso</h3>
+                    </div>
+                    <img class="column-image" src="img/cap_.jpg">
+                </div>
+                <div class="column">
+                    <img class="column-image" src="img/cap_.jpg">
+                    <div class="column-text-wrapper">
+                        <h3>Latte</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </body>
 
 </html>
