grid finished and text centered

--- a/index.html
+++ b/index.html
@@ -60,6 +60,23 @@
             </div>
         </div>
 
+        <div class="standard-margin-section">
+            <div class="grid">
+                <div class="grid-text">
+                    <h3>Cappucino</h3>
+                    <p class="grid-writing">Espresso is a coffee-making method of Italian origin, in which a small amount of nearly boiling water is forced under pressure (expressed) through finely-ground coffee beans.</p>
+                </div>
+                <div class="espresso-pic">
+                </div>
+                <div class="grid-text secondone">
+                    <h3>Espresso</h3>
+                    <p class="grid-writing">Espresso is a coffee-making method of Italian origin, in which a small amount of nearly boiling water is forced under pressure (expressed) through finely-ground coffee beans.</p>
+                </div>
+                <div class="cappucino-pic">
+                </div>
+            </div>
+        </div>
+
     </body>
 
 </html>
