--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <h1>I love</h1>
                     <h1 id="second-header">coffee!</h1>
                 </div>
-                <p> Coffee is good, we like drinking it to stay awake. There are many coffees around the world, but the best coffee there is the one in your hand that you are drinking right now. </p>
+                <p> Coffee is good, we like drinking  it to stay awake. There are many coffees around the world, but the best coffee there is the one in your hand that you are drinking right now. </p>
             </div>
         </div>
 
@@ -74,6 +74,23 @@
                 </div>
                 <div class="cappucino-pic">
                 </div>
+            </div>
+        </div>
+
+        <div class="contact-section">
+            <div class="contact-img-wrapper">
+                <h3 id="contact-heading">let's talk <br> coffee.</h3>
+            </div>
+            <div class="form-wrapper">
+                <form>
+                    <input type="text" placeholder="Name">
+                    <br>
+                    <input type="text" placeholder="Email">
+                    <br>
+                    <textarea placeholder="Message"></textarea>
+                    <br>
+                    <input type="submit">
+                </form>
             </div>
         </div>
 
