updated animations and accesibility

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <body>
 
-        <div id="navbar">
+        <nav id="navbar">
             <div id="nav-social">   
                 <img id="icon" src="img/fb.png">
                 <img id="icon" src="img/insta.png">
@@ -21,23 +21,23 @@
                 <h3 id="menu-link"> About </h3>
                 <h3 id="menu-link"> Contact </h3>
             </div>
-        </div>
+        </nav>
 
-        <div id="hero-section">
+        <section id="hero-section">
             <div id="hero-wrapper">
                 <div id="heading-wrapper">
-                    <h1>I love</h1>
+                    <h1 id="first-header">I love</h1>
                     <h1 id="second-header">coffee!</h1>
                 </div>
                 <p> Coffee is good, we like drinking  it to stay awake. There are many coffees around the world, but the best coffee there is the one in your hand that you are drinking right now. </p>
             </div>
-        </div>
+        </section>
 
         <div id="hero-beans">
             
         </div>
 
-        <div class="standard-margin-section">
+        <section class="standard-margin-section">
             <div class="columns-wrapper">
                 <div class="column">
                     <img class="column-image" src="img/cap_.jpg">
@@ -58,9 +58,9 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
 
-        <div class="standard-margin-section">
+        <section class="standard-margin-section">
             <div class="grid">
                 <div class="grid-text">
                     <h3>Cappucino</h3>
@@ -75,9 +75,9 @@
                 <div class="cappucino-pic">
                 </div>
             </div>
-        </div>
+        </section>
 
-        <div class="contact-section">
+        <section class="contact-section">
             <div class="contact-img-wrapper">
                 <h3 id="contact-heading">let's talk <br> coffee.</h3>
             </div>
@@ -92,7 +92,24 @@
                     <input type="submit">
                 </form>
             </div>
-        </div>
+        </section>
+
+        <footer class="footer-wrapper">
+            <div class="standard-margin-section footer">
+                <h3 id="footer-heading">
+                    coffee.
+                </h3>
+                <div class="footer-menu">
+                    <a class="footer-link"> Home </a>
+                    <a class="footer-link"> About </a>
+                    <a class="footer-link"> Contact </a>
+                </div>
+            </div>
+
+            <div class="copyright-wrapper">
+                <p class="copyright-text"> Copyright 2020, Get Coding </p>
+            </div>
+        </footer>
 
     </body>
 
