--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <h1 id="first-header">I love</h1>
                     <h1 id="second-header">coffee!</h1>
                 </div>
-                <p> Coffee is good, we like drinking  it to stay awake. There are many coffees around the world, but the best coffee there is the one in your hand that you are drinking right now. </p>
+                <p id="sub-title"> Coffee is good, we like drinking  it to stay awake. There are many coffees around the world, but the best coffee there is the one in your hand that you are drinking right now. </p>
             </div>
         </section>
 
