--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
                 <h3 id="menu-link"> About </h3>
                 <h3 id="menu-link"> Contact </h3>
             </div>
+
+            <div id="dropdown">
+                <div id="dropdown-button"></div>
+                <div id="dropdown-content">
+                    <a class="link" href="#">Home</a>
+                    <a class="link" href="#">About</a>
+                    <a class="link" href="#">Contact</a>
+                </div>
+            </div>
+
         </nav>
 
         <section id="hero-section">
